--- a/index.html
+++ b/index.html
@@ -87,64 +87,76 @@
 							<div class="gallery style1 small onscroll-fade-in">
 								<article>
 										<div class="image">
-										<img src="images/lazi-voyage/vuon-ngon-ngu-viet/phuong-ngu-vietnam-3.jpg" alt="Ngôn ngữ Việt Nam" />
+										<img src="images/lazi-voyage/vuon-ngon-ngu-viet/phuong-ngu-vietnam-3.jpg" alt="Chơi chữ miền bắc" />
 										</div>
 									<div class="caption">
 										<h3>Người bắc chơi chữ</h3>
 										<p>Ông cơm bà cơm mẹ cơm bố cơm em cơm</p>
-										<ul class="actions fixed">
-											<li><span class="button small">Chi tiết</span></li>
-										</ul>
 									</div>
 								</article>
 								<article>
 									<div class="image">
-										<img src="images/lazi-voyage/vuon-ngon-ngu-viet/phuong-ngu-vietnam-1.jpg" alt="Ngôn ngữ Việt Nam" />
+										<img src="images/lazi-voyage/vuon-ngon-ngu-viet/phuong-ngu-vietnam-1.jpg" alt="Ngôn ngữ miền bắc việt nam" />
 									</div>
 									<div class="caption">
 										<h3>Người bắc chơi chữ</h3>
 										<p>Cơm hay tivi </p>
-										<ul class="actions fixed">
-											<li><span class="button small">Chi tiết</span></li>
-										</ul>
 									</div>
 								</article>
 								<article>
 									<div class="image">
-										<img src="images/lazi-voyage/vuon-ngon-ngu-viet/phuong-ngu-vietnam-2.jpg" alt="Ngôn ngữ Việt Nam" />
+										<img src="images/lazi-voyage/vuon-ngon-ngu-viet/phuong-ngu-vietnam-2.jpg" alt="Ngôn ngữ địa phương miền bắc" />
 									</div>
 									<div class="caption">
 										<h3>Người bắc chơi chữ</h3>
 										<p>Đừng có xới 1 môi</p>
-										<ul class="actions fixed">
-											<li><span class="button small">Chi tiết</span></li>
-										</ul>
 									</div>
 								</article>
 								<article>
 									<div class="image">
-										<img src="images/lazi-voyage/vuon-ngon-ngu-viet/phuong-ngu-vietnam-4.jpg" alt="Ngôn ngữ Việt Nam" />
+										<img src="images/lazi-voyage/vuon-ngon-ngu-viet/phuong-ngu-vietnam-4.jpg" alt="Phương ngữ miền nam việt nam" />
 									</div>
 									<div class="caption">
 										<h3>Phương ngữ miền nam</h3>
 										<p>Bự chà bá lửa</p>
-										<ul class="actions fixed">
-											<li><span class="button small">Chi tiết</span></li>
-										</ul>
 									</div>
 								</article>
 								<article>
 									<div class="image">
-										<img src="images/lazi-voyage/vuon-ngon-ngu-viet/phuong-ngu-vietnam-5.jpg" alt="Ngôn ngữ Việt Nam" />
+										<img src="images/lazi-voyage/vuon-ngon-ngu-viet/phuong-ngu-vietnam-5.jpg" alt="Phương ngữ miền tây mekong" />
 									</div>
 									<div class="caption">
 										<h3>Phương ngữ miền tây</h3>
 										<p>Bá láp bá xàm</p>
-										<ul class="actions fixed">
-											<li><span class="button small">Chi tiết</span></li>
-										</ul>
 									</div>
 								</article>
+								<article>
+									<div class="image">
+										<img src="images/lazi-voyage/vuon-ngon-ngu-viet/tu-long-trending.jpg" alt="Câu nói trending"/>
+									</div>
+									<div class="caption">
+										<h3>Câu nói trending</h3>
+										<p>Đỉnh nóc kịch trần bay phấp phới</p>
+									</div>
+								</article>
+								<article>
+									<div class="image">
+										<img src="images/lazi-voyage/vuon-ngon-ngu-viet/duy-nen-meme.jpg" alt="Meme KOL việt"/>
+									</div>
+									<div class="caption">
+										<h3>Meme KOL việt</h3>
+										<p>Trời chợt đổ mùa thu giữa mùa hè</p>
+									</div>
+								</article>
+								<article>
+									<div class="image">
+										<img src="images/lazi-voyage/vuon-ngon-ngu-viet/tien-linh-status" alt="Phát ngôn hài hước"/>
+									</div>
+									<div class="caption">
+										<h3>Phát ngôn hài hước</h3>
+										<p>Thể thao là không ngừng bỏ cuộc</p>
+									</div>
+								</article>								
 							</div>
 							<ul class="actions stacked" style="margin-top: 2em;">
 								<li><a href="#first" class="button">Tìm hiểu</a></li>
@@ -412,3 +424,4 @@
 			</script>
 	</body>
 </html>
+
