--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
 								</article>
 								<article>
 									<div class="image">
-										<img src="images/lazi-voyage/vuon-ngon-ngu-viet/tien-linh-status" alt="Phát ngôn hài hước"/>
+										<img src="images/lazi-voyage/vuon-ngon-ngu-viet/tien-linh-status.jpg" alt="Phát ngôn hài hước"/>
 									</div>
 									<div class="caption">
 										<h3>Phát ngôn hài hước</h3>
@@ -424,4 +424,5 @@
 			</script>
 	</body>
 </html>
+
 
