--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 		<!-- GSC lazivoyage.netlify.app -->
 		<meta name="google-site-verification" content="9bHvrkrhUepII74YkTKqknmoWnGsNtwpUPhlwcsk42A" />
 		<!-- GSC lazivoyage.com -->
+		<meta name="google-site-verification" content="GF7_kka9_KkarQBvSN091viAw9vb9BnFLR5Oo0LnJtA" />
 		
 	</head>
 	<body class="is-preload">
@@ -424,5 +425,6 @@
 			</script>
 	</body>
 </html>
+
 
 
