--- a/index.html
+++ b/index.html
@@ -67,9 +67,9 @@
 					<section class="banner style1 orient-left content-align-left image-position-right fullscreen onload-image-fade-in onload-content-fade-right">
 						<div class="content" id="banner">
 							<h1>Blog Văn Hoá Việt</h1>
-							<p style="text-align: justify;">Chào bạn, Lazi Voyage là blog để bạn khám phá <a href="https://lazivoyage.blogspot.com">văn hoá Việt</a> và <a href="https://lazivoyage.wordpress.com">du lịch Việt Nam</a> qua những câu chuyện và trải nghiệm đầy cảm hứng..</p>
+							<p style="text-align: justify;">Chào bạn, Lazi Voyage là blog để bạn khám phá văn hoá Việt và du lịch Việt Nam qua những câu chuyện và trải nghiệm đầy cảm hứng...</p>
 							<ul class="actions stacked">
-								<li><a href="#first" class="button big wide smooth-scroll-middle">Bắt đầu</a></li>
+								<li><a href="https://lazivoyage.blogspot.com" class="button big wide smooth-scroll-middle">Văn Hoá Việt</a></li>
 							</ul>
 						</div>
 						<div class="image">
@@ -425,6 +425,7 @@
 			</script>
 	</body>
 </html>
+
 
 
 
