--- a/index.html
+++ b/index.html
@@ -166,13 +166,15 @@
 						<div class="content" id="map">
 							<h2>Bài Viết Nổi Bật</h2>
 							<p style="text-align: justify;">Với Lazi, kiến thức là một hành trình không ngừng nghỉ. Chúng mình luôn tâm niệm rằng những gì mình biết chỉ là một phần rất nhỏ trong thế giới rộng lớn. Đặc biệt, trong lĩnh vực văn hóa, một khái niệm đa chiều và luôn biến đổi, mọi góc nhìn đều quý giá.</p>
-							<p>Vì vậy, những bài viết trong chuyên mục này thể hiện góc nhìn và kiến thức mà đội ngũ Lazi đã nghiên cứu, tìm hiểu. Rất mong nhận được sự đón nhận và những góp ý chân thành từ mọi người để blog ngày càng hoàn thiện và giàu giá trị hơn.</p>
-							<ul class="actions stacked">
-								<li><a href="https://lazivoyage.blogspot.com" class="button">Bài viết khác</a></li>
-							</ul>
+							<p style="text-align: justify;">Vì vậy, những bài viết trong chuyên mục này thể hiện góc nhìn và kiến thức mà đội ngũ Lazi đã nghiên cứu, tìm hiểu. Rất mong nhận được sự đón nhận và những góp ý chân thành từ mọi người để blog ngày càng hoàn thiện và giàu giá trị hơn.</p>
 						</div>
 						<div class="image">
 							<img src="images/lazi-voyage/banner-rong-thoi-ly.jpg" alt="Rồng thời Lý, biểu tượng văn hoá việt" />
+						</div>
+						<div>	
+							<ul class="actions stacked">
+								<li><a href="https://lazivoyage.blogspot.com" class="button">Bài viết khác</a></li>
+							</ul>
 						</div>
 					</section>
 				
@@ -416,3 +418,4 @@
 			</script>
 	</body>
 </html>
+
