--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 	<body class="is-preload">
 
 					<!-- Header -->
-					<header data-include="_include/header.html"></header>
+					<header data-include="_includes/header.html"></header>
 		
 		<!-- Wrapper -->
 			<div id="wrapper" class="divided">
@@ -279,7 +279,7 @@
 					</section>
 
 				<!-- Footer -->
-					<footer data-include="_include/footer.html"></footer>
+					<footer data-include="_includes/footer.html"></footer>
 			</div>
 
 		<!-- Scripts -->
@@ -367,6 +367,7 @@
 			</script>
 	</body>
 </html>
+
 
 
 
