--- a/index.html
+++ b/index.html
@@ -282,7 +282,7 @@
 					        <h2>FAQ Về Văn Hoá Việt</h2>
 					        <p style="text-align: justify;">Khám phá những câu hỏi thường gặp về văn hoá Việt Nam, từ phong tục tập quán đến ẩm thực và lễ hội truyền thống.</p>
 					        
-					        <div class="items style1 faq onscroll-fade-in">
+					        <div>
 					            <!-- Câu hỏi 1 -->
 					            <section class="faq-item">
 					                <button class="faq-question">
@@ -452,6 +452,7 @@
 			</script>
 	</body>
 </html>
+
 
 
 
