--- a/index.html
+++ b/index.html
@@ -285,9 +285,9 @@
 					        <div>
 					            <!-- Câu hỏi 1 -->
 					            <section class="faq-item">
-					                <button class="faq-question">
+					                <div class="faq-question">
 					                    <h3>Tết Nguyên Đán có ý nghĩa như thế nào trong văn hoá Việt Nam? <i class="fas fa-chevron-down"></i></h3>
-					                </button>
+					                </div>
 					                <div class="faq-answer">
 					                    <p>Tết Nguyên Đán (hay còn gọi là Tết Cổ Truyền) là dịp lễ quan trọng nhất trong năm của người Việt, đánh dấu sự khởi đầu của một năm mới theo âm lịch. Tết không chỉ là thời điểm giao thoa giữa trời đất, con người và thần linh mà còn là dịp để gia đình sum họp, tưởng nhớ tổ tiên và cầu chúc những điều tốt lành. Các phong tục như dọn dẹp nhà cửa, gói bánh chưng, đi chúc Tết, lì xì và xin chữ đầu năm đều mang ý nghĩa sâu sắc về sự khởi đầu mới, may mắn và tình thân.</p>
 					                </div>
@@ -295,9 +295,9 @@
 					            
 					            <!-- Câu hỏi 2 -->
 					            <section class="faq-item">
-					                <button class="faq-question">
+					                <div class="faq-question">
 					                    <h3>Áo dài có vai trò như thế nào trong văn hoá Việt? <i class="fas fa-chevron-down"></i></h3>
-					                </button>
+					                </div>
 					                <div class="faq-answer">
 					                    <p>Áo dài là quốc phục của Việt Nam, biểu tượng cho vẻ đẹp duyên dáng và tinh thần dân tộc. Trải qua nhiều thay đổi theo thời gian, áo dài ngày nay vẫn giữ được những nét truyền thống như tà áo dài, cổ áo cao và thân áo ôm sát, đồng thời kết hợp với các yếu tố hiện đại trong chất liệu và họa tiết. Áo dài không chỉ được mặc trong các dịp lễ, Tết, cưới hỏi mà còn là trang phục của nhiều nữ sinh Việt Nam, trở thành biểu tượng văn hóa được công nhận và trân trọng trên toàn thế giới.</p>
 					                </div>
@@ -305,9 +305,9 @@
 					            
 					            <!-- Câu hỏi 3 -->
 					            <section class="faq-item">
-					                <button class="faq-question">
+					                <div class="faq-question">
 					                    <h3>Vì sao ẩm thực Việt Nam được đánh giá cao trên thế giới? <i class="fas fa-chevron-down"></i></h3>
-					                </button>
+					                </div>
 					                <div class="faq-answer">
 					                    <p>Ẩm thực Việt Nam được đánh giá cao nhờ sự kết hợp hài hòa giữa các yếu tố âm-dương, ngũ hành, tạo nên sự cân bằng trong hương vị và dinh dưỡng. Mỗi món ăn thường có sự phối hợp của năm vị cơ bản: chua, cay, mặn, ngọt, đắng. Nét đặc trưng của ẩm thực Việt là sự tươi ngon của nguyên liệu, sử dụng nhiều rau thơm, gia vị tự nhiên và kỹ thuật chế biến ít dầu mỡ. Từ phở, bánh mì đến gỏi cuốn và các món ăn địa phương đều thể hiện sự sáng tạo, tinh tế và bản sắc văn hóa độc đáo của người Việt.</p>
 					                </div>
@@ -452,6 +452,7 @@
 			</script>
 	</body>
 </html>
+
 
 
 
