--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
 					<section class="wrapper style1 align-center">
 						<div class="inner" id="culture">
 							<h2>Góc Văn Hoá việt</h2>
-							<p style="text-align: justify;">Góc Văn hoá Việt là nơi bạn khám phá chiều sâu của văn hoá Việt qua những câu chuyện, phong tục và nét đẹp truyền thống. Từ kho tàng sử Việt hào hùng đến những khía cạnh tinh tế của cuộc sống Việt đương đại, chúng tôi mời bạn cùng tìm hiểu để thêm yêu và tự hào về bản sắc dân tộc.</p>
+							<p style="text-align: justify;">Góc Văn hoá Việt là nơi bạn khám phá chiều sâu của văn hoá Việt qua những câu chuyện, phong tục và nét đẹp truyền thống. Từ kho tàng sử Việt hào hùng đến những khía cạnh tinh tế của cuộc sống Việt đương đại, Lazi mời bạn (bấm vào tiêu đề mỗi chuyên mục) để cùng tìm hiểu và thêm yêu, thêm tự hào về bản sắc dân tộc Việt Nam.</p>
 							<div class="items style1 medium onscroll-fade-in">
 								<section><div class="inner">
 									<span class="icon style2 major fa-gem"></span>
@@ -452,6 +452,7 @@
 			</script>
 	</body>
 </html>
+
 
 
 
