--- a/index.html
+++ b/index.html
@@ -67,7 +67,9 @@
 					<section class="banner style1 orient-left content-align-left image-position-right fullscreen onload-image-fade-in onload-content-fade-right">
 						<div class="content" id="banner">
 							<h1>Blog Văn Hoá Việt</h1>
-							<p style="text-align: justify;">Chào bạn, Lazi Voyage là blog để bạn khám phá văn hoá Việt và du lịch Việt Nam qua những câu chuyện và trải nghiệm đầy cảm hứng...</p>
+							<p style="text-align: justify;">Lazi Voyage là một blog văn hóa Việt chuyên sâu, nơi những người đam mê khám phá và trân trọng giá trị Việt tìm thấy tiếng nói chung. Sứ mệnh của chúng tôi là mang đến cho độc giả một cái nhìn toàn diện và chân thực nhất về văn hóa Việt Nam qua từng điểm đến.</p>
+							<p style="text-align: justify;">Khác với các blog du lịch thông thường, Lazivoyage không chỉ cung cấp những cẩm nang du lịch Việt Nam chi tiết, mà còn đi sâu vào từng nét đặc trưng văn hóa: từ ẩm thực địa phương, làng nghề truyền thống, lễ hội độc đáo cho đến kiến trúc cổ kính. Mỗi bài viết là một hành trình kể chuyện, giúp bạn không chỉ đi mà còn hiểu và cảm nhận được tinh hoa của đất nước.</p>
+							<p style="text-align: justify;">Được sáng lập bởi những người yêu Việt Nam, chúng tôi tin rằng du lịch là cách tốt nhất để kết nối với văn hóa và con người. Lazivoyage.com là cẩm nang đáng tin cậy dành cho những ai muốn trải nghiệm Việt Nam một cách trọn vẹn, chân thực và sâu sắc.</p>
 							<ul class="actions stacked">
 								<li><a href="https://lazivoyage.blogspot.com" class="button big wide smooth-scroll-middle">Văn Hoá Việt</a></li>
 							</ul>
@@ -355,13 +357,14 @@
 				<!-- Footer -->
 					<footer class="minimalist-footer">
 					  <img src="images/lazi-voyage/logo-lazi-update.png" alt="Lazi Voyage" class="footer-logo">
-					  <p><a href="https://linktr.ee/guidefrancophonevietnam"  target="_blank">Blog văn hóa Việt</a></p>
+					  <p><strong>Blog văn hóa Việt</strong></p>
 					  <div class="social-circle">
 					    <a href="https://instagram.com/josvu19"><i class="fab fa-instagram"></i></a>
 					    <a href="https://facebook.com/josvu19"><i class="fab fa-facebook"></i></a>
 					    <a href="https://fr.pinterest.com/goavecjo/"><i class="fab fa-pinterest"></i></a>
 					    <a href="https://x.com/guidefrvietnam"><i class="fab fa-twitter"></i></a>
-					    <a href="https://www.linkedin.com/in/guidefrancophonevietnam/"><i class="fab fa-linkedin"></i></a>
+					    <a href="https://linkedin.com/in/guidefrancophonevietnam/"><i class="fab fa-linkedin"></i></a>
+						<a href="https://lazivoyage.wordpress.com"><i class="fa-brands fa-wordpress-simple"></i></a>
 					  </div>
 					  <div class="copyright">© 2023 Lazi Voyage | All Rights Reserved</div>
 					</footer>
@@ -452,6 +455,7 @@
 			</script>
 	</body>
 </html>
+
 
 
 
