--- a/search.html
+++ b/search.html
@@ -64,19 +64,20 @@
                 </div>
             </section>
 
-            <!-- Footer -->
-            <footer class="minimalist-footer">
-                <img src="images/lazi-voyage/logo-lazi-update.png" alt="Lazi Voyage" class="footer-logo">
-                <p><a href="https://linktr.ee/guidefrancophonevietnam"  target="_blank">Blog văn hóa Việt</a></p>
-                <div class="social-circle">
-                    <a href="https://instagram.com/josvu19"><i class="fab fa-instagram"></i></a>
-                    <a href="https://facebook.com/josvu19"><i class="fab fa-facebook"></i></a>
-                    <a href="https://fr.pinterest.com/goavecjo/"><i class="fab fa-pinterest"></i></a>
-                    <a href="https://x.com/guidefrvietnam"><i class="fab fa-twitter"></i></a>
-                    <a href="https://www.linkedin.com/in/guidefrancophonevietnam/"><i class="fab fa-linkedin"></i></a>
-                </div>
-                <div class="copyright">© 2023 Lazi Voyage | All Rights Reserved</div>
-            </footer>
+				<!-- Footer -->
+					<footer class="minimalist-footer">
+					  <img src="images/lazi-voyage/logo-lazi-update.png" alt="Lazi Voyage" class="footer-logo">
+					  <p><strong>Blog văn hóa Việt</strong></p>
+					  <div class="social-circle">
+					    <a href="https://instagram.com/josvu19"><i class="fab fa-instagram"></i></a>
+					    <a href="https://facebook.com/josvu19"><i class="fab fa-facebook"></i></a>
+					    <a href="https://fr.pinterest.com/goavecjo/"><i class="fab fa-pinterest"></i></a>
+					    <a href="https://x.com/guidefrvietnam"><i class="fab fa-twitter"></i></a>
+					    <a href="https://linkedin.com/in/guidefrancophonevietnam/"><i class="fab fa-linkedin"></i></a>
+						<a href="https://lazivoyage.wordpress.com"><i class="fa-brands fa-wordpress-simple"></i></a>
+					  </div>
+					  <div class="copyright">© 2023 Lazi Voyage | All Rights Reserved</div>
+					</footer>
         </div>
 
         <!-- Scripts -->
