--- a/index.html
+++ b/index.html
@@ -91,76 +91,40 @@
 							<div class="gallery style1 small onscroll-fade-in">
 								<article>
 										<div class="image">
-										<img src="images/lazi-voyage/vuon-ngon-ngu-viet/phuong-ngu-vietnam-3.jpg" alt="Chơi chữ miền bắc" />
+										<img src="images/lazi-voyage/vuon-ngon-ngu-viet/phuong-ngu-vietnam-3.jpg" alt="Mâm Cơm Việt" />
 										</div>
 									<div class="caption">
-										<h3>Người bắc chơi chữ</h3>
-										<p>Ông cơm bà cơm mẹ cơm bố cơm em cơm</p>
+										<h3>Mâm Cơm Việt</h3>
+										<p>Bữa ăn sum vầy, gắn kết gia đình Việt</p>
 									</div>
 								</article>
 								<article>
 									<div class="image">
-										<img src="images/lazi-voyage/vuon-ngon-ngu-viet/phuong-ngu-vietnam-1.jpg" alt="Ngôn ngữ miền bắc việt nam" />
+										<img src="images/lazi-voyage/vuon-ngon-ngu-viet/phuong-ngu-vietnam-4.jpg" alt="Cà Phê Sài Gòn" />
 									</div>
 									<div class="caption">
-										<h3>Người bắc chơi chữ</h3>
-										<p>Cơm hay tivi </p>
+										<h3>Cà Phê Sài Gòn</h3>
+										<p>Nét văn hoá Việt giữa lòng phố thị Sài Gòn</p>
 									</div>
 								</article>
 								<article>
 									<div class="image">
-										<img src="images/lazi-voyage/vuon-ngon-ngu-viet/phuong-ngu-vietnam-2.jpg" alt="Ngôn ngữ địa phương miền bắc" />
+										<img src="images/lazi-voyage/vuon-ngon-ngu-viet/phuong-ngu-vietnam-5.jpg" alt="Áo Bà Ba" />
 									</div>
 									<div class="caption">
-										<h3>Người bắc chơi chữ</h3>
-										<p>Đừng có xới 1 môi</p>
+										<h3>Áo Bà Ba</h3>
+										<p>Trang phục dân dã, đậm hồn quê Nam Bộ</p>
 									</div>
 								</article>
 								<article>
 									<div class="image">
-										<img src="images/lazi-voyage/vuon-ngon-ngu-viet/phuong-ngu-vietnam-4.jpg" alt="Phương ngữ miền nam việt nam" />
+										<img src="images/lazi-voyage/vuon-ngon-ngu-viet/tu-long-trending.jpg" alt="Tết Táo Quân"/>
 									</div>
 									<div class="caption">
-										<h3>Phương ngữ miền nam</h3>
-										<p>Bự chà bá lửa</p>
+										<h3>Tết Táo Quân</h3>
+										<p>Linh hồn Tết văn hoá Việt mỗi tối trước giao thừa</p>
 									</div>
-								</article>
-								<article>
-									<div class="image">
-										<img src="images/lazi-voyage/vuon-ngon-ngu-viet/phuong-ngu-vietnam-5.jpg" alt="Phương ngữ miền tây mekong" />
-									</div>
-									<div class="caption">
-										<h3>Phương ngữ miền tây</h3>
-										<p>Bá láp bá xàm</p>
-									</div>
-								</article>
-								<article>
-									<div class="image">
-										<img src="images/lazi-voyage/vuon-ngon-ngu-viet/tu-long-trending.jpg" alt="Câu nói trending"/>
-									</div>
-									<div class="caption">
-										<h3>Câu nói trending</h3>
-										<p>Đỉnh nóc kịch trần bay phấp phới</p>
-									</div>
-								</article>
-								<article>
-									<div class="image">
-										<img src="images/lazi-voyage/vuon-ngon-ngu-viet/duy-nen-meme.jpg" alt="Meme KOL việt"/>
-									</div>
-									<div class="caption">
-										<h3>Meme KOL việt</h3>
-										<p>Trời chợt đổ mùa thu giữa mùa hè</p>
-									</div>
-								</article>
-								<article>
-									<div class="image">
-										<img src="images/lazi-voyage/vuon-ngon-ngu-viet/tien-linh-status.jpg" alt="Phát ngôn hài hước"/>
-									</div>
-									<div class="caption">
-										<h3>Phát ngôn hài hước</h3>
-										<p>Thể thao là không ngừng bỏ cuộc</p>
-									</div>
-								</article>								
+								</article>			
 							</div>
 					</section>
 
@@ -458,3 +422,4 @@
 			</script>
 	</body>
 </html>
+
