--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 	<body class="is-preload">
 
 					<!-- Header -->
-					<div data-include="_includes/header.html"></div>
+					<header data-include="_includes/header.html"></header>
 		
 		<!-- Wrapper -->
 			<div id="wrapper" class="divided">
@@ -286,7 +286,7 @@
 					</section>
 
 				<!-- Footer -->
-					<div data-include="_includes/footer.html"></div>
+					<footer data-include="_includes/footer.html"></footer>
 			</div>
 
 		<!-- Scripts -->
@@ -375,6 +375,7 @@
 			</script>
 	</body>
 </html>
+
 
 
 
