--- a/search.html
+++ b/search.html
@@ -15,43 +15,7 @@
     </head>
     <body class="is-preload">
         <!-- Header -->
-        <header class="sticky-header">
-            <div class="logo">
-                <a href="/"><img src="images/lazi-voyage/logo-lazi-update.png" alt="Lazi Voyage"></a>
-            </div>
-            <nav class="desktop-menu">
-                <ul>
-                    <li><a href="/">Home</a></li>
-                    <li><a href="/#lang">Ngôn Ngữ</a></li>
-                    <li><a href="/#map">Bản Đồ</a></li>
-                    <li><a href="/#culture">Văn Hoá</a></li>
-                    <li><a href="/#contact">Liên Hệ</a></li>
-                </ul>
-            </nav>
-            <div class="search-bar-container">
-                <div class="search-bar">
-                    <input type="text" id="mySearchInput" placeholder="Tìm kiếm..." aria-label="Search" value="">
-                    <button type="submit" aria-label="Search button">
-                        <i class="fas fa-search"></i>
-                    </button>
-                </div>
-                <div id="searchResults" class="search-results-list"></div>
-            </div>
-            <div class="mobile-menu">
-                <button class="hamburger" aria-label="Menu">
-                    <i class="fas fa-bars"></i>
-                </button>
-            </div>
-            <div class="mobile-menu-content">
-                <ul>
-                    <li><a href="/">Home</a></li>
-                    <li><a href="/#lang">Ngôn Ngữ</a></li>
-                    <li><a href="/#map">Bản Đồ</a></li>
-                    <li><a href="/#culture">Văn Hoá</a></li>
-                    <li><a href="/#contact">Liên Hệ</a></li>
-                </ul>
-            </div>
-        </header>
+        <div data-include="_includes/header.html"></div>
 
         <!-- Wrapper -->
         <div id="wrapper" class="divided">
@@ -65,23 +29,12 @@
             </section>
 
 				<!-- Footer -->
-					<footer class="minimalist-footer">
-					  <img src="images/lazi-voyage/logo-lazi-update.png" alt="Lazi Voyage" class="footer-logo">
-					  <p><strong>Blog văn hóa Việt</strong></p>
-					  <div class="social-circle">
-					    <a href="https://instagram.com/josvu19"><i class="fab fa-instagram"></i></a>
-					    <a href="https://facebook.com/josvu19"><i class="fab fa-facebook"></i></a>
-					    <a href="https://fr.pinterest.com/goavecjo/"><i class="fab fa-pinterest"></i></a>
-					    <a href="https://x.com/guidefrvietnam"><i class="fab fa-twitter"></i></a>
-					    <a href="https://linkedin.com/in/guidefrancophonevietnam/"><i class="fab fa-linkedin"></i></a>
-						<a href="https://lazivoyage.wordpress.com"><i class="fa-brands fa-wordpress-simple"></i></a>
-					  </div>
-					  <div class="copyright">© 2023 Lazi Voyage | All Rights Reserved</div>
-					</footer>
+					<div data-include="_includes/footer.html"></div>
         </div>
 
         <!-- Scripts -->
-        <script src="assets/js/jquery.min.js"></script>
+        <script src="assets/js/include.js"></script>
+		<script src="assets/js/jquery.min.js"></script>
         <script src="assets/js/jquery.scrollex.min.js"></script>
         <script src="assets/js/jquery.scrolly.min.js"></script>
         <script src="assets/js/browser.min.js"></script>
