--- a/search.html
+++ b/search.html
@@ -20,7 +20,7 @@
         <!-- Wrapper -->
         <div id="wrapper" class="divided">
             <!-- Search Results Section -->
-            <section class="wrapper style1 align-center">
+            <section class="wrapper style1">
                 <div class="inner">
                     <h2>Kết Quả Tìm Kiếm</h2>
                     <p>Kết quả tìm kiếm cho từ khóa: <strong id="searchQuery"></strong></p>
