--- a/index.html
+++ b/index.html
@@ -24,12 +24,12 @@
 					<!-- Header -->
 					<div data-include="_includes/header.html"></div>
 		
-		<!-- Wrapper -->
+		<!-- Hero Section -->
 			<div id="wrapper" class="divided">
 
-				<!-- Welcome Banner -->
-					<section class="banner style1 orient-left content-align-left image-position-right fullscreen onload-image-fade-in onload-content-fade-right">
-						<div class="content" id="banner">
+				<!-- Home -->
+					<section id="home" class="banner style1 orient-left content-align-left image-position-right fullscreen onload-image-fade-in onload-content-fade-right">
+						<div class="content">
 							<h1>Blog Văn Hoá Việt</h1>
 							<p style="text-align: justify;">Lazi Voyage là một blog văn hóa Việt chuyên sâu, nơi những người đam mê khám phá và trân trọng giá trị Việt tìm thấy tiếng nói chung. Sứ mệnh của chúng tôi là mang đến cho độc giả một cái nhìn toàn diện và chân thực nhất về văn hóa Việt Nam qua từng điểm đến.</p>
 							<p style="text-align: justify;">Khác với các blog du lịch thông thường, Lazivoyage không chỉ cung cấp những cẩm nang du lịch Việt Nam chi tiết, mà còn đi sâu vào từng nét đặc trưng văn hóa: từ ẩm thực địa phương, làng nghề truyền thống, lễ hội độc đáo cho đến kiến trúc cổ kính. Mỗi bài viết là một hành trình kể chuyện, giúp bạn không chỉ đi mà còn hiểu và cảm nhận được tinh hoa của đất nước.</p>
@@ -44,8 +44,8 @@
 					</section>
 				
 				<!-- Dấu Ấn Văn Hoá Việt -->
-					<section class="wrapper style1 align-center">
-						<div class="inner" id="lang">
+					<section id="dauan" class="wrapper style1 align-center">
+						<div class="inner">
 							<h2>Dấu Ấn Văn Hoá Việt</h2>
 							<p style="text-align: justify;">Văn hoá Việt không chỉ được kể bằng lời, mà còn hiển hiện trong từng khung hình. Mỗi bức ảnh là một minh chứng sống động cho bản sắc Việt – từ trống đồng Đông Sơn, tà áo dài duyên dáng, đến những phiên chợ vùng cao rực rỡ sắc màu.</p>
 							<p style="text-align: justify;">Bộ sưu tập hình ảnh này là lời mời bạn bước vào hành trình thị giác, nơi văn hoá Việt được tái hiện rõ nét và đầy cảm xúc. Hãy để đôi mắt bắt đầu chuyến đi, trước khi trái tim kịp xao động.</p>
@@ -93,8 +93,8 @@
 					</section>
 
 					<!-- Mảnh Ghép Văn Hoá Việt -->
-					<section class="wrapper style1 align-center">
-						<div class="inner" id="culture">
+					<section id="manhghep" class="wrapper style1 align-center">
+						<div class="inner">
 							<h2>Mảnh Ghép Văn Hoá Việt</h2>
 							<p style="text-align: justify;">Mỗi phong tục, món ăn, hay làng nghề đều là một mảnh ghép tạo nên bức tranh tổng thể của văn hoá Việt. Dù giản dị, nhưng mỗi mảnh ghép đều chứa đựng một câu chuyện dài, gắn với lịch sử và đời sống con người.</p>
 							<div class="items style1 medium onscroll-fade-in">
@@ -147,9 +147,9 @@
 						</div>
 					</section>
 
-				<!-- Vietnam Map -->
-					<section class="spotlight style2 orient-left content-align-left image-position-center onscroll-image-fade-in">
-						<div class="content" id="map">
+				<!-- Bài Viết Nổi Bật -->
+					<section id="baiviet" class="spotlight style2 orient-left content-align-left image-position-center onscroll-image-fade-in">
+						<div class="content">
 							<h2>Bài Viết Nổi Bật</h2>
 							<p style="text-align: justify;">Với Lazi, kiến thức là một hành trình không ngừng nghỉ. Chúng mình luôn tâm niệm rằng những gì mình biết chỉ là một phần rất nhỏ trong thế giới rộng lớn. Đặc biệt, trong lĩnh vực văn hóa, một khái niệm đa chiều và luôn biến đổi, mọi góc nhìn đều quý giá.</p>
 							<p style="text-align: justify;">Vì vậy, những bài viết trong chuyên mục này thể hiện góc nhìn và kiến thức mà đội ngũ Lazi đã nghiên cứu, tìm hiểu. Rất mong nhận được sự đón nhận và những góp ý chân thành từ mọi người để blog ngày càng hoàn thiện và giàu giá trị hơn.</p>
@@ -209,7 +209,7 @@
 					</section>
 
 					<!-- FAQ Section -->
-					<section class="wrapper style1 align-center">
+					<section id="faq" class="wrapper style1 align-center">
 					    <div class="inner">
 					        <h2>FAQ Về Văn Hoá Việt</h2>
 					        <p style="text-align: justify;">Trong hành trình tìm hiểu văn hoá Việt, chắc hẳn bạn sẽ có nhiều thắc mắc: Vì sao trống đồng lại được xem là biểu tượng thiêng liêng? Vì sao áo dài trở thành quốc phục? Tại sao Tết Nguyên Đán lại có ý nghĩa đặc biệt đến thế?</p>
@@ -249,8 +249,8 @@
 					    </div>
 					</section>
 				<!-- Contact -->
-					<section class="wrapper style1 align-center">
-						<div class="inner medium" id="contact">
+					<section id="contact" class="wrapper style1 align-center">
+						<div class="inner medium">
 							<h2>Thông tin liên hệ</h2>
 								<form name="contact" method="POST" data-netlify="true" action="success.html" netlify-honeypot="bot-field">
 								    <p style="display:none;">
@@ -375,8 +375,3 @@
 			</script>
 	</body>
 </html>
-
-
-
-
-
