--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
 					<section id="dauan" class="wrapper style1 align-center">
 						<div class="inner">
 							<h2>Dấu Ấn Văn Hoá Việt</h2>
-							<p style="text-align: justify;">Văn hoá Việt không chỉ được kể bằng lời, mà còn hiển hiện trong từng khung hình. Mỗi bức ảnh là một minh chứng sống động cho bản sắc Việt – từ trống đồng Đông Sơn, tà áo dài duyên dáng, đến những phiên chợ vùng cao rực rỡ sắc màu.</p>
-							<p style="text-align: justify;">Bộ sưu tập hình ảnh này là lời mời bạn bước vào hành trình thị giác, nơi văn hoá Việt được tái hiện rõ nét và đầy cảm xúc. Hãy để đôi mắt bắt đầu chuyến đi, trước khi trái tim kịp xao động.</p>
+							<p style="text-align: justify;">Nếu quá trình tìm hiểu văn hoá Việt là một hành trình không ngừng nghỉ, thì mỗi "dấu ấn" văn hóa trong phần này chính là những trạm dừng chân đầu tiên, nơi cảm xúc được khơi gợi bằng thị giác và trái tim.</p>
+							<p style="text-align: justify;"><strong>Văn hoá Việt</strong> không chỉ được kể bằng lời, mà còn hiển hiện trong từng khung hình, mỗi bức ảnh là một minh chứng sống động cho bản sắc Việt. Đó là những đường nét chạm khắc trên trống đồng, tà áo dài thướt tha trong gió, mâm cơm ấm cúng sum vầy, những gánh hàng rong vội vã hay nét duyên dáng của chiếc áo bà ba. Nơi đây, Lazi Voyage mời bạn dừng chân, để những cảm nhận đầu tiên về vẻ đẹp văn hóa Việt Nam không chỉ chạm đến thị giác, mà còn rung lên những nhịp đập cảm xúc từ sâu thẳm trái tim. Mỗi "dấu ấn" là một lời thì thầm, kể về một phần hồn của đất nước, khơi gợi trong bạn những câu hỏi để bạn sẵn sàng dấn thân vào một hành trình sâu sắc hơn.</p>
 						</div>
 
 						<!-- Gallery -->
@@ -59,7 +59,7 @@
 										</div>
 									<div class="caption">
 										<h3>Mâm Cơm Việt</h3>
-										<p>Bữa ăn sum vầy, gắn kết gia đình Việt</p>
+										<p>Tình Thân Gói Trọn Trong Bữa Cơm Sum Vầy</p>
 									</div>
 								</article>
 								<article>
@@ -68,7 +68,7 @@
 									</div>
 									<div class="caption">
 										<h3>Cà Phê Sài Gòn</h3>
-										<p>Nét văn hoá Việt giữa lòng phố thị Sài Gòn</p>
+										<p>Nét Chấm Phá Văn Hoá Giữa Lòng Phố Thị Nhộn Nhịp</p>
 									</div>
 								</article>
 								<article>
@@ -77,7 +77,7 @@
 									</div>
 									<div class="caption">
 										<h3>Áo Bà Ba</h3>
-										<p>Trang phục dân dã, đậm hồn quê Nam Bộ</p>
+										<p>Nét Duyên Dáng Miền Tây Sông Nước, Giản Dị Mà Sâu Sắc</p>
 									</div>
 								</article>
 								<article>
@@ -85,8 +85,8 @@
 										<img src="images/lazi-voyage/vuon-ngon-ngu-viet/tu-long-trending.jpg" alt="Tết Táo Quân"/>
 									</div>
 									<div class="caption">
-										<h3>Tết Táo Quân</h3>
-										<p>Linh hồn Tết văn hoá Việt mỗi tối trước giao thừa</p>
+										<h3>Táo Quân</h3>
+										<p>Dấu Hiệu Năm Cũ Sắp Qua, Năm Mới Sẽ Đến</p>
 									</div>
 								</article>			
 							</div>
@@ -96,7 +96,8 @@
 					<section id="manhghep" class="wrapper style1 align-center">
 						<div class="inner">
 							<h2>Mảnh Ghép Văn Hoá Việt</h2>
-							<p style="text-align: justify;">Mỗi phong tục, món ăn, hay làng nghề đều là một mảnh ghép tạo nên bức tranh tổng thể của văn hoá Việt. Dù giản dị, nhưng mỗi mảnh ghép đều chứa đựng một câu chuyện dài, gắn với lịch sử và đời sống con người.</p>
+							<p style="text-align: justify;">Nếu những "dấu ấn" trên là cánh cửa mở ra thế giới Văn hoá Việt, thì những "mảnh ghép" này chính là con đường dẫn bạn vào sâu bên trong, khám phá chiều sâu của một bức tranh đa sắc. Mỗi phong tục, món ăn, hay làng nghề đều là một mảnh ghép chứa đựng câu chuyện dài, gắn với lịch sử, với triết lý sống và với hồn cốt của người Việt.</p>
+							<p style="text-align: justify;">Hãy cùng Lazi Voyage tìm hiểu những gì làm nên bản sắc, để thấy rằng văn hoá không chỉ là những thứ nhìn thấy được, mà còn là những giá trị vô hình, những tinh hoa kết tinh qua ngàn đời. Nó là sợi chỉ đỏ xuyên suốt, kết nối con người với nhau, với thiên nhiên và với quá khứ hào hùng của dân tộc. Tìm hiểu những mảnh ghép này, bạn sẽ nhận ra rằng bản sắc không hề tĩnh tại, mà luôn vận động, tiếp biến và tái tạo không ngừng để hòa mình vào dòng chảy của thời đại, nhưng không đánh mất "hồn cốt" của mình.</p>
 							<div class="items style1 medium onscroll-fade-in">
 								<section><div class="inner">
 									<span class="icon style2 major fa-gem"></span>
@@ -212,8 +213,8 @@
 					<section id="faq" class="wrapper style1 align-center">
 					    <div class="inner">
 					        <h2>FAQ Về Văn Hoá Việt</h2>
-					        <p style="text-align: justify;">Trong hành trình tìm hiểu văn hoá Việt, chắc hẳn bạn sẽ có nhiều thắc mắc: Vì sao trống đồng lại được xem là biểu tượng thiêng liêng? Vì sao áo dài trở thành quốc phục? Tại sao Tết Nguyên Đán lại có ý nghĩa đặc biệt đến thế?</p>
-							<p style="text-align: justify;">FAQ này được xây dựng như một bản đồ dẫn đường – nơi giải đáp những câu hỏi phổ biến nhất về văn hoá Việt, từ phong tục tập quán, ẩm thực, đến lễ hội truyền thống. Đây chính là điểm nối liền giữa những hình ảnh và mảnh ghép ngắn gọn phía trên, với các bài viết chuyên sâu ở phần tiếp theo.</p>
+					        <p style="text-align: justify;">Trong hành trình tìm hiểu và chiêm nghiệm <strong>văn hoá Việt</strong>, hẳn bạn đã có những thắc mắc: Vì sao Trống đồng lại được xem là biểu tượng thiêng liêng? Vì sao tà áo dài trở thành quốc phục? Vì sao Tết Nguyên Đán lại có ý nghĩa đặc biệt đến thế? Văn hoá Việt không chỉ là những hình ảnh hay mảnh ghép, mà còn là một kho tàng kiến thức sâu rộng, luôn cần được khám phá.</p>
+							<p style="text-align: justify;">Bộ câu hỏi thường gặp này được xây dựng như một bản đồ dẫn đường cuối cùng, nơi chúng tôi giải đáp những câu hỏi phổ biến nhất, từ phong tục tập quán đến lễ hội truyền thống, giúp bạn tổng kết lại những gì đã được chiêm ngưỡng và hiểu sâu hơn về những giá trị cốt lõi đã tạo nên bản sắc Việt.</p>
 					        
 					        <div>
 					            <!-- Câu hỏi 1 -->
@@ -375,3 +376,4 @@
 			</script>
 	</body>
 </html>
+
