--- a/index.html
+++ b/index.html
@@ -101,12 +101,12 @@
 							<div class="items style1 medium onscroll-fade-in">
 								<section><div class="inner">
 									<span class="icon style2 major fa-gem"></span>
-									<h3><a href="https://lazivoyage.blogspot.com/search/label/V%C4%83n%20Ho%C3%A1%20Vi%E1%BB%87t">Văn Hoá Việt</a></h3>
+									<h3><a href="https://lazivoyage.blogspot.com/search/label/V%C4%83n%20Ho%C3%A1%20Vi%E1%BB%87t" style="text-decoration: underline;">Văn Hoá Việt</a></h3>
 									<p>Bức tranh đa sắc, kết tinh tinh hoa truyền thống và hiện đại của văn hoá Việt.</p>
 								</div></section>
 								<section><div class="inner">
 									<span class="icon solid style2 major fa-save"></span>
-									<h3><a href="https://lazivoyage.wordpress.com/category/cuoc-song-viet/">Cuộc Sống Việt</a></h3>
+									<h3><a href="https://lazivoyage.wordpress.com/category/cuoc-song-viet/" style="text-decoration: underline;">Cuộc Sống Việt</a></h3>
 									<p>Hình ảnh đời sống người Việt trải dài từ miền núi đến hải đảo.</p>
 								</div></section>
 								<section><div class="inner">
@@ -376,4 +376,5 @@
 			</script>
 	</body>
 </html>
+
 
