--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
 								</div></section>
 								<section><div class="inner">
 									<span class="icon solid style2 major fa-yin-yang"></span>
-									<h3>Tôn Giáo Tín Ngưỡng</h3>
+									<h3><a href="https://lazivoyage.wordpress.com/tag/tin-nguong-ton-giao-viet-nam/" style="text-decoration: underline;">Tôn Giáo Tín Ngưỡng</a></h3>
 									<p>Đời sống tâm linh Việt từ thờ cúng tổ tiên đến tín ngưỡng dân gian.</p>
 								</div></section>
 								<section><div class="inner">
@@ -376,5 +376,6 @@
 			</script>
 	</body>
 </html>
+
 
 
