--- a/index.html
+++ b/index.html
@@ -126,7 +126,8 @@
 								</div></section>
 								<section><div class="inner">
 									<span class="icon solid style2 major fa-book-open"></span>
-									<h3>Cẩm Nang Du Lịch</h3>
+									<h3><a href="https://lazivoyage.blogspot.com/search/label/C%E1%BA%A9m%20Nang%20Du%20L%E1%BB%8Bch" style="text-decoration: underline;">Cẩm Nang Du Lịch</a></h3>
+
 									<p>Hành trình khám phá Việt Nam với góc nhìn văn hoá đặc sắc.</p>
 								</div></section>
 								<section><div class="inner">
@@ -376,6 +377,7 @@
 			</script>
 	</body>
 </html>
+
 
 
 
