--- a/index.html
+++ b/index.html
@@ -375,8 +375,71 @@
 			  }
 			}
 			</script>
+		<!-- Schema FAQPage -->
+			<script type="application/ld+json">
+			{
+			  "@context": "https://schema.org",
+			  "@type": "FAQPage",
+			  "mainEntity": [
+			    {
+			      "@type": "Question",
+			      "name": "Tết Nguyên Đán có ý nghĩa như thế nào trong văn hoá Việt Nam?",
+			      "acceptedAnswer": {
+			        "@type": "Answer",
+			        "text": "Tết Nguyên Đán (hay còn gọi là Tết Cổ Truyền) là dịp lễ quan trọng nhất trong năm của người Việt, đánh dấu sự khởi đầu của một năm mới theo âm lịch. Tết không chỉ là thời điểm giao thoa giữa trời đất, con người và thần linh mà còn là dịp để gia đình sum họp, tưởng nhớ tổ tiên và cầu chúc những điều tốt lành."
+			      }
+			    },
+			    {
+			      "@type": "Question",
+			      "name": "Áo dài có vai trò như thế nào trong văn hoá Việt?",
+			      "acceptedAnswer": {
+			        "@type": "Answer",
+			        "text": "Áo dài là quốc phục của Việt Nam, biểu tượng cho vẻ đẹp duyên dáng và tinh thần dân tộc. Trải qua nhiều thay đổi theo thời gian, áo dài ngày nay vẫn giữ được những nét truyền thống như tà áo dài, cổ áo cao và thân áo ôm sát, đồng thời kết hợp với các yếu tố hiện đại trong chất liệu và họa tiết."
+			      }
+			    },
+			    {
+			      "@type": "Question",
+			      "name": "Vì sao ẩm thực Việt Nam được đánh giá cao trên thế giới?",
+			      "acceptedAnswer": {
+			        "@type": "Answer",
+			        "text": "Ẩm thực Việt Nam được đánh giá cao nhờ sự kết hợp hài hòa giữa các yếu tố âm-dương, ngũ hành, tạo nên sự cân bằng trong hương vị và dinh dưỡng. Mỗi món ăn thường có sự phối hợp của năm vị cơ bản: chua, cay, mặn, ngọt, đắng."
+			      }
+			    }
+			  ]
+			}
+			</script>
+		<!-- Schema Article cho bài viết nổi bật với keywords -->
+			<script type="application/ld+json">
+			{
+			  "@context": "https://schema.org",
+			  "@type": "Article",
+			  "headline": "Bản Đồ Du Lịch Việt Nam Sau Sáp Nhập",
+			  "description": "Khám phá bản đồ du lịch Việt Nam chi tiết sau sáp nhập, với đầy đủ thông tin về các điểm đến tại miền Bắc, miền Trung và miền Nam.",
+			  "image": "https://lazivoyage.com/images/lazi-voyage/blog/Ban-do-du-lich-vietnam-sau-sap-nhap.jpg",
+			  "author": {
+			    "@type": "Organization",
+			    "name": "Lazi Voyage"
+			  },
+			  "publisher": {
+			    "@type": "Organization",
+			    "name": "Lazi Voyage",
+			    "logo": {
+			      "@type": "ImageObject",
+			      "url": "https://lazivoyage.com/images/lazi-voyage/logo-lazi-update.png"
+			    }
+			  },
+			  "datePublished": "2025-08-01",
+			  "dateModified": "2025-08-01",
+			  "mainEntityOfPage": {
+			    "@type": "WebPage",
+			    "@id": "https://lazivoyage.blogspot.com/2025/08/ban-do-du-lich-viet-nam-sau-sap-nhap.html"
+			  },
+			  "keywords": "bản đồ du lịch Việt Nam, bản đồ Việt Nam sau sáp nhập, du lịch miền Bắc, văn hóa Việt"
+			}
+			</script>
 	</body>
 </html>
+
 
 
 
