--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 							<h2>Mảnh Ghép Văn Hoá Việt</h2>
 							<p style="text-align: justify;">Nếu những "dấu ấn" trên là cánh cửa mở ra thế giới Văn hoá Việt, thì những "mảnh ghép" này chính là con đường dẫn bạn vào sâu bên trong, khám phá chiều sâu của một bức tranh đa sắc. Mỗi phong tục, món ăn, hay làng nghề đều là một mảnh ghép chứa đựng câu chuyện dài, gắn với lịch sử, với triết lý sống và với hồn cốt của người Việt.</p>
 							<p style="text-align: justify;">Hãy cùng Lazi Voyage tìm hiểu những gì làm nên bản sắc, để thấy rằng văn hoá không chỉ là những thứ nhìn thấy được, mà còn là những giá trị vô hình, những tinh hoa kết tinh qua ngàn đời. Nó là sợi chỉ đỏ xuyên suốt, kết nối con người với nhau, với thiên nhiên và với quá khứ hào hùng của dân tộc. Tìm hiểu những mảnh ghép này, bạn sẽ nhận ra rằng bản sắc không hề tĩnh tại, mà luôn vận động, tiếp biến và tái tạo không ngừng để hòa mình vào dòng chảy của thời đại, nhưng không đánh mất "hồn cốt" của mình.</p>
-							<div class="items style1 medium onscroll-fade-in">
+							<div class="items style1 big onscroll-fade-in">
 								<section><div class="inner">
 									<span class="icon style2 major fa-gem"></span>
 									<h3><a href="https://lazivoyage.blogspot.com/search/label/V%C4%83n%20Ho%C3%A1%20Vi%E1%BB%87t" style="text-decoration: underline;">Văn Hoá Việt</a></h3>
@@ -116,34 +116,18 @@
 								</div></section>
 								<section><div class="inner">
 									<span class="icon solid style2 major fa-ticket"></span>
-									<h3>Lễ Hội Việt</h3>
+									<h3>Lễ Hội Dân Gian</h3>
 									<p>Không khí rộn ràng của lễ hội truyền thống gắn kết cộng đồng Việt.</p>
-								</div></section>
-								<section><div class="inner">
-									<span class="icon solid style2 major fa-vest"></span>
-									<h3>Trang Phục Việt</h3>
-									<p>Tà áo dài và trang phục dân tộc, biểu tượng của văn hoá Việt.</p>
 								</div></section>
 								<section><div class="inner">
 									<span class="icon solid style2 major fa-book-open"></span>
 									<h3><a href="https://lazivoyage.blogspot.com/search/label/C%E1%BA%A9m%20Nang%20Du%20L%E1%BB%8Bch" style="text-decoration: underline;">Cẩm Nang Du Lịch</a></h3>
-
 									<p>Hành trình khám phá Việt Nam với góc nhìn văn hoá đặc sắc.</p>
 								</div></section>
 								<section><div class="inner">
 									<span class="icon solid style2 major fa-yin-yang"></span>
 									<h3><a href="https://lazivoyage.wordpress.com/tag/tin-nguong-ton-giao-viet-nam/" style="text-decoration: underline;">Tôn Giáo Tín Ngưỡng</a></h3>
 									<p>Đời sống tâm linh Việt từ thờ cúng tổ tiên đến tín ngưỡng dân gian.</p>
-								</div></section>
-								<section><div class="inner">
-									<span class="icon solid style2 major fa-desktop"></span>
-									<h3>Phong Tục Dân Gian</h3>
-									<p>Nét đẹp phong tục Việt lưu giữ bản sắc và tinh thần dân tộc.</p>
-								</div></section>
-								<section><div class="inner">
-									<span class="icon solid style2 major fa-hammer"></span>
-									<h3>Làng Nghề Truyền Thống</h3>
-									<p>Tinh hoa thủ công làng nghề, di sản sống của văn hoá Việt.</p>
 								</div></section>
 							</div>
 						</div>
@@ -552,6 +536,7 @@
 			</script>
 	</body>
 </html>
+
 
 
 
