--- a/index.html
+++ b/index.html
@@ -102,32 +102,32 @@
 								<section><div class="inner">
 									<span class="icon style2 major fa-gem"></span>
 									<h3><a href="https://lazivoyage.blogspot.com/search/label/V%C4%83n%20Ho%C3%A1%20Vi%E1%BB%87t" style="text-decoration: underline;">Văn Hoá Việt</a></h3>
-									<p>Bức tranh đa sắc, kết tinh tinh hoa truyền thống và hiện đại của văn hoá Việt.</p>
+									<p>Tìm hiểu về Văn hoá Việt như tiếp nhận một dòng chảy lịch sử đầy tự hào, nơi những câu chuyện của ngàn năm văn hiến được kể lại bằng ngôn từ, hình ảnh và cảm xúc. Đây là nơi Lazi Voyage sẽ cùng bạn khám phá những giá trị cốt lõi, những triết lý sống và những tinh hoa văn hoá đã định hình nên con người Việt Nam, từ lòng yêu nước, tinh thần cộng đồng đến sự gắn kết với thiên nhiên. Tất cả tạo nên một bức tranh toàn cảnh về văn hoá Việt mà bất cứ ai cũng khao khát tìm hiểu.</p>
 								</div></section>
 								<section><div class="inner">
 									<span class="icon solid style2 major fa-save"></span>
 									<h3><a href="https://lazivoyage.wordpress.com/category/cuoc-song-viet/" style="text-decoration: underline;">Cuộc Sống Việt</a></h3>
-									<p>Hình ảnh đời sống người Việt trải dài từ miền núi đến hải đảo.</p>
+									<p>Để hiểu sâu hơn về văn hoá Việt, hãy cùng Lazi Voyage tìm về nhịp sống đời thường ở Việt Nam. Chuyên mục Cuộc sống Việt sẽ là lăng kính chân thực giúp bạn cảm nhận rõ hơn những nét văn hoá độc đáo, từ nếp sống dung dị của người dân, những món đồ vật thân thuộc, cho đến sự đa dạng của trang phục Việt từ truyền thống đến hiện đại. Mỗi bài viết là một câu chuyện nhỏ, kể về thiên nhiên, con người và những giá trị vô hình đang len lỏi trong từng khoảnh khắc của cuộc sống.</p>
 								</div></section>
 								<section><div class="inner">
 									<span class="icon solid style2 major fa-utensils"></span>
 									<h3>Ẩm Thực Việt</h3>
-									<p>Hồn cốt văn hoá Việt qua phở, bánh chưng và ẩm thực đường phố.</p>
+									<p>Văn hoá không chỉ thể hiện qua lời nói hay hành động, mà còn "sống" trong từng hương vị. Chuyên mục Ẩm thực Việt sẽ dẫn lối bạn qua hành trình khám phá những món ăn trứ danh, từ những món ăn dân dã nơi đồng quê đến những đặc sản mang đậm dấu ấn riêng của mỗi vùng miền. Mỗi món ăn không chỉ là sự kết hợp của gia vị, mà còn chứa đựng cả tinh hoa văn hoá Việt, phản ánh sự tinh tế, sáng tạo và triết lý âm dương hài hoà của người Việt.</p>
 								</div></section>
 								<section><div class="inner">
 									<span class="icon solid style2 major fa-ticket"></span>
 									<h3>Lễ Hội Dân Gian</h3>
-									<p>Không khí rộn ràng của lễ hội truyền thống gắn kết cộng đồng Việt.</p>
-								</div></section>
-								<section><div class="inner">
-									<span class="icon solid style2 major fa-book-open"></span>
-									<h3><a href="https://lazivoyage.blogspot.com/search/label/C%E1%BA%A9m%20Nang%20Du%20L%E1%BB%8Bch" style="text-decoration: underline;">Cẩm Nang Du Lịch</a></h3>
-									<p>Hành trình khám phá Việt Nam với góc nhìn văn hoá đặc sắc.</p>
+									<p>Nếu ẩm thực là hương vị, thì Lễ hội dân gian chính là bản hoà ca của văn hoá Việt. Đây là nơi những lễ hội Việt rực rỡ sắc màu được tái hiện, nơi các phong tục dân gian được lưu giữ và truyền lại qua bao thế hệ. Đặc biệt, bạn sẽ được tìm hiểu sâu hơn về những câu chuyện phía sau các làng nghề truyền thống, nơi những người thợ thủ công khéo léo gìn giữ "hồn cốt" văn hoá trong từng sản phẩm. Mỗi lễ hội, mỗi phong tục là một nét chấm phá đầy sống động trên bức tranh văn hoá Việt.</p>
 								</div></section>
 								<section><div class="inner">
 									<span class="icon solid style2 major fa-yin-yang"></span>
 									<h3><a href="https://lazivoyage.wordpress.com/tag/tin-nguong-ton-giao-viet-nam/" style="text-decoration: underline;">Tôn Giáo Tín Ngưỡng</a></h3>
-									<p>Đời sống tâm linh Việt từ thờ cúng tổ tiên đến tín ngưỡng dân gian.</p>
+									<p>Để hiểu được chiều sâu của văn hoá Việt, không thể bỏ qua chuyên mục Tôn giáo tín ngưỡng. Đây là nơi những niềm tin, những giá trị tâm linh của người Việt được hé mở. Từ sự tôn kính tổ tiên, thờ cúng thần linh đến những triết lý Phật giáo, tín ngưỡng dân gian, tất cả đã hoà quyện, tạo nên một đời sống tinh thần phong phú, hướng con người tới những điều thiện lành và gắn kết cộng đồng.</p>
+								</div></section>
+								<section><div class="inner">
+									<span class="icon solid style2 major fa-book-open"></span>
+									<h3><a href="https://lazivoyage.blogspot.com/search/label/C%E1%BA%A9m%20Nang%20Du%20L%E1%BB%8Bch" style="text-decoration: underline;">Cẩm Nang Du Lịch</a></h3>
+									<p>Và cuối cùng, để trực tiếp trải nghiệm và cảm nhận những "mảnh ghép" văn hoá Việt này, chuyên mục Cẩm nang du lịch sẽ là người bạn đồng hành tin cậy của bạn. Dù bạn là người yêu thích khám phá vẻ đẹp thiên nhiên hay muốn hòa mình vào đời sống văn hoá địa phương, chuyên mục này sẽ cung cấp những kinh nghiệm du lịch quý báu, những gợi ý điểm đến hấp dẫn và những câu chuyện thú vị về con người Việt Nam.</p>
 								</div></section>
 							</div>
 						</div>
@@ -536,6 +536,7 @@
 			</script>
 	</body>
 </html>
+
 
 
 
