--- a/index.html
+++ b/index.html
@@ -275,6 +275,19 @@
 					<div data-include="_includes/footer.html"></div>
 			</div>
 
+		<!-- Floating Buttons -->
+		<div class="floating-buttons">
+		    <!-- Back to Top Button -->
+		    <button id="backToTop" class="floating-btn" title="Lên đầu trang">
+		        <i class="fas fa-chevron-up"></i>
+		    </button>
+		    
+		    <!-- Blog Button -->
+		    <a href="https://lazivoyage.blogspot.com" class="floating-btn blog-btn" title="Blog Văn Hoá Việt">
+		        <i class="fas fa-blog"></i>
+		    </a>
+		</div>
+		
 		<!-- Scripts -->
 			<script src="assets/js/include.js"></script>
 			<script src="assets/js/jquery.min.js"></script>
@@ -536,6 +549,7 @@
 			</script>
 	</body>
 </html>
+
 
 
 
