--- a/index.html
+++ b/index.html
@@ -284,6 +284,7 @@
 			<script src="assets/js/util.js"></script>
 			<script src="assets/js/main.js"></script>
 			<script src="assets/js/search.js"></script>
+			<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 		<!-- Schema Organization -->
 			<script type="application/ld+json">
 			{
@@ -535,6 +536,7 @@
 			</script>
 	</body>
 </html>
+
 
 
 
